fix: hover content aligned centered

--- a/src/grid/style.scss
+++ b/src/grid/style.scss
@@ -177,7 +177,7 @@
 	height: auto;
 	visibility: hidden;
 	opacity: 0;
-	top: 45%;
+	top: 35%;
 	bottom: 50%;
 	font-weight: 600;
 	font-size: 16px;
